# acortalink

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.landing.yml  docker-compose.yml  gunicorn.conf.py  loadtest.py  manage.py  pyproject.toml
acortador_project/: asgi.py  compat.py  context_processors.py  email_backends.py  maintenance.py  rate_limit.py  settings.py  urls.py  wsgi.py
core/: admin.py  api.py  apps.py  decorators.py  domain_service.py  forms.py  internal_api.py  mercadopago_service.py  models.py  stripe_service.py  tests.py  tests_features.py  urls.py  verification_service.py  views.py
core/migrations/: 0001_initial.py  0002_alter_subscription_provider.py  0003_subscription_plan.py  0004_add_qr_password_analytics_api.py  0005_add_domain_team_webhook.py  0006_add_custom_domain_to_shortlink.py  0007_add_domain_purchase_fields.py  0008_add_last_payment_id.py
docs/: arquitectura.md  blog-estatico.md  roadmap.md
landing/: BingSiteAuth.xml  Dockerfile  index.html  llms.txt  robots.txt  sitemap.xml
landing/blog/: acortador-argentina.html  acortador-brasil.html  acortador-colombia.html  acortador-con-analytics.html  acortador-con-api.html  acortador-con-dominio-propio.html  acortador-con-mercado-pago.html  acortador-con-qr-code.html  acortador-con-seo.html  acortador-de-links-gratis.html  acortador-latam.html  acortador-mas-barato.html  acortador-mexico.html  acortador-para-pymes.html  acortar-links-para-email-marketing.html  acortar-links-para-flyers.html  acortar-links-para-instagram.html  acortar-links-para-whatsapp.html  (+14 more)
(+29 files in other folders)
